--- a/src/index.css
+++ b/src/index.css
@@ -117,6 +117,15 @@ h6 {
   color: var(--color-black-300);
 }
 
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header__headings {
+  min-width: 70%;
+}
+
 .header__heading {
   font-weight: 700;
   font-size: 4.2rem;
@@ -132,17 +141,21 @@ h6 {
 .socials {
   display: flex;
   /* justify-content: space-between; */
-  margin: 1rem 0;
+  flex-direction: column;
+  margin-top: 1rem;
+  margin-left: 2rem;
 }
 
 .socials__item {
   font-family: var(--font-sans-serif);
   font-weight: 400;
+  margin-bottom: 0.5rem;
 }
 
 .socials__text {
-  padding-left: 0.5rem;
-  padding-right: 2rem;
+  padding-left: 0.3rem;
+  padding-right: 0.5rem;
+  font-size: 0.75rem;
 }
 
 .mainBody {
